<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="title_activity_detail">DetailActivity</string>


    <string name="notification_download_channel">Download update channel</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="glide_selection">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_selection">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_selection">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="default_selection">Failed to get file name</string>

    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>

    <string name="download_image_cd">An icon of downloading</string>
    <string name="btn_download">Download</string>
    <string name="btn_loading">We are loading </string>
    <string name="download_error_toast">Please select the file to download</string>

    <!--Details Activity-->
    <string name="file_name_title">File name:</string>
    <string name="status_title">Status:</string>
    <string name="btn_ok">OK</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>