<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    android:id="@+id/detailsMotionLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailsBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/fileNameTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/file_name_title"
            android:textColor="@color/colorSecondText"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fileNameTitleValueTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp"
            tools:text="@string/retrofit_selection"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fileNameTitleTV"
            app:layout_constraintTop_toTopOf="@+id/fileNameTitleTV" />

        <TextView
            android:id="@+id/statusTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/status_title"
            android:textColor="@color/colorSecondText"
            app:layout_constraintStart_toStartOf="@+id/fileNameTitleTV"
            app:layout_constraintTop_toBottomOf="@+id/fileNameTitleValueTV" />

        <TextView
            android:id="@+id/statusValueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/status_success"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="@+id/fileNameTitleValueTV"
            app:layout_constraintTop_toTopOf="@+id/statusTitleTV" />

        <Button
            android:id="@+id/dismissBtn"
            style="@style/ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_ok"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>